--- a/resources/assets/sass/partials/_postItem.scss
+++ b/resources/assets/sass/partials/_postItem.scss
@@ -15,6 +15,14 @@
         box-sizing: border-box;
         background-color: $white-bg;
 
+        .image{
+            height: 200px;
+            width: 100%;
+            background-size: cover;
+            background-position: center center;
+            margin-bottom: 10px;
+        }
+
         img{
             margin-bottom: .75rem;
             width: 100%;
