--- a/resources/assets/sass/profile.scss
+++ b/resources/assets/sass/profile.scss
@@ -36,3 +36,15 @@
     }
 
 }
+
+// Edit form from the profile page
+.edit{
+
+    .image{
+        width: 300px;
+        height: 250px;
+        background-size: cover;
+        background-position: center center;
+        margin-bottom: 20px;
+    }
+}
